# app/controllers/techniques-controller.js
@@ -4,10 +4,15 @@ const techniquesService = require('../services/techniques-service');
 const logger = require('../lib/logger');
 
 exports.retrieveAll = function(req, res) {
-    const offset = req.query.offset || 0;
-    const limit = req.query.limit || 0;
+    const options = {
+        offset: req.query.offset || 0,
+        limit: req.query.limit || 0,
+        state: req.query.state,
+        revoked: req.query.revoked,
+        deprecated: req.query.deprecated
+    }
 
-    techniquesService.retrieveAll(offset, limit, function(err, techniques) {
+    techniquesService.retrieveAll(options, function(err, techniques) {
         if (err) {
             logger.error('Failed with error: ' + err);
             return res.status(500).send('Unable to get techniques. Server error.');
